corrected section/navbar overlap

--- a/css/styles.css
+++ b/css/styles.css
@@ -4,7 +4,8 @@ body {
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
-  padding-top: 70px;
+  margin-top: 50px;
+  padding-top: 100px;
 }
 
 h1 {
@@ -17,7 +18,6 @@ h2 {
   font-family: 'Titillium Web', sans-serif;
   font-weight: bold;
   font-variant:small-caps;
-
 }
 
 h3 {
@@ -50,13 +50,14 @@ p {
   padding-right: 20px;
 }
 
+
 /*************/
 
 .text-area {
   margin: 50px 10px 50px 10px;
   border-radius: 5px;
   min-height: 200px;
-  padding: 20px;
+  padding: 30px 20px 20px 20px;
   background-color: rgba(245, 255, 245, 0.85); /* pale green */
   color: black;
 }
